wiki/content/specifications/vec/v210/classes/slotspecification.md
---
title: SlotSpecification
toc: false
type: specs
date: "2024-01-08"
draft: false
specification: VEC
version: 2.1.0
documentType: "Recommendation"
elementType: Class
classes:
  - SlotSpecification
menu_name: vec-2.1.0
---
<p>Specification for the definition of slots. </p>

## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | electrical_parts |
| **Applied Stereotype**  |   |
| **Base Classifier**     | [Specification]({{< relref "specification.md" >}})<br/>  |
| **Is Abstract**         | false |
| **Derived Classifiers** |   |

## Attributes
|  Name  |  Type  |  Mult.  |  Description  |  Owning Classifier  |
|--------|--------|---------|---------------|--------------|
|identification| [String]({{< relref "string.md" >}}) | 1 | <p> Specifies a unique identification of the specification. The identification is guaranteed to be unique within the document containing the specification. For all VEC-documents a Specification-instance can be trusted to be identical if the DocumentVersion-instance is the same (see DocumentVersion) and the identification of the Specification is the same.      </p> | [Specification]({{< relref "specification.md" >}}) |
|description| [AbstractLocalizedString]({{< relref "abstractlocalizedstring.md" >}}) | 0..* | <p> Specifies additional, human readable information about the specification.      </p> | [Specification]({{< relref "specification.md" >}}) |
|emvProtectionRequired| [Boolean]({{< relref "boolean.md" >}}) | 0..1 | <p>Specifies whether the slot needs EMV protection. </p> | [SlotSpecification]({{< relref "slotspecification.md" >}}) |
|gender| [SlotGender]({{< relref "slotgender.md" >}}) | 0..1 | <p> Specifies the gender of the slot. Valid values are defined in an open enumeration.      </p> | [SlotSpecification]({{< relref "slotspecification.md" >}}) |
|layoutType| [SlotLayoutType]({{< relref "slotlayouttype.md" >}}) | 0..1 | <p> Specifies the layout of the slot from a mechanical /&#160;geometrical point of view.       </p> | [SlotSpecification]({{< relref "slotspecification.md" >}}) |
|secondaryLocking| [Boolean]({{< relref "boolean.md" >}}) | 0..1 | <p> Specifies whether the slot supports &quot;secondary locking&quot;, which refers to a locking or a lock reinforcement of the terminals in the connector, in addition to the primary locking of terminal itself (e.g. lances on the terminal). This is also often referred to as TPA&#160;(Terminal Position Assurance).      </p> | [SlotSpecification]({{< relref "slotspecification.md" >}}) |
|secondaryLockingType| [SecondaryLockingType]({{< relref "secondarylockingtype.md" >}}) | 0..1 | Defines the type of the secondary locking, if the slot features a secondary locking (<i>secondaryLocking=true)</i>. | [SlotSpecification]({{< relref "slotspecification.md" >}}) |
|numberOfCavities| [Integer]({{< relref "integer.md" >}}) | 1 | <p>The possible number of cavities in the layout defined by the SlotSpecification. This includes all cavities in the layout. The actual Slot can define specific cavities in the layout as "not available".  </p> | [SlotSpecification]({{< relref "slotspecification.md" >}}) |

## Outgoing Relations
<table>
    <thead>
        <tr>
           <th colspan="6">Other End</th>
           <th colspan="1">This End</th>
           <th colspan="1">General</th>
        </tr>
        <tr>
           <th>Role</th>
           <th>Type</th>
           <th>Mult.</th>
           <th>Agg.{{< info agg >}}</th>
           <th>Unique{{< info unique >}}</th>
           <th>Ordered{{< info ordered >}}</th>
           <th>Mult.</th>
           <th>Description</th>
        </tr>
    <thead>
    <tbody>
    <tr>
        <td>slotLayout</td>
        <td><a href="{{< relref "slotlayout.md" >}}">SlotLayout</a></td>
        <td>0..1</td>
        <td>Y</td>
        <td>Y</td>
        <td>N</td>
        <td>1</td>
        <td><p> References the layout associated with this slot.      </p></td>
    </tr>
    </tbody>
</table>

##  Incoming Relations
<table>
    <thead>
        <tr>
           <th colspan="5">This End</th>
           <th colspan="2">Other End</th>
           <th colspan="1">General</th>
        </tr>
        <tr>
           <th>Role</th>
           <th>Mult.</th>
           <th>Agg.{{< info agg >}}</th>
           <th>Unique{{< info unique >}}</th>
           <th>Ordered{{< info ordered >}}</th>
           <th>Type</th>
           <th>Mult.</th>
           <th>Description</th>
        </tr>
    <thead>
    <tbody>
    <tr>
        <td>slotSpecification</td>
        <td>0..1</td>
        <td>N</td>
        <td>Y</td>
        <td>N</td>
        <td><a href="{{< relref "abstractslot.md" >}}">AbstractSlot</a></td>
        <td>0..*</td>
        <td>References the SlotSpecification that is satisfied by the slot.</td>
    </tr>
    </tbody>
</table>



